@@ -8,6 +8,10 @@ is also provided AS IS and is probably completely unreadable.
 ------------------------------------------------------------------------------------
 July 30 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>
 
+	* Headless zombies can no longer eat or drink.
+
+July 30 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>
+
 	* Menu picture changed.
 	
 July 30 2003 Timo Kiviluoto <markku.kiviluoto@sono.fimnet.fi>
